prerender some pages

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,6 +1,8 @@
 ---
 import Layout from '@/layouts/Layout.astro'
 import Button from '@/components/buttons/Button'
+
+export const prerender = true
 ---
 
 <Layout title="TA-TE-TI">
