--- a/src/pages/online.astro
+++ b/src/pages/online.astro
@@ -5,9 +5,9 @@ import Layout from '@/layouts/Layout.astro'
 <Layout title="TA-TE-TI ONLINE">
 	<h1>TA-TE-TI</h1>
 	<section>
-		<!-- <button id="create-room">CREAR SALA</button>
-		<button id="join-room">UNIRSE A SALA</button> -->
-		<h2>Fuera de servicio</h2>
+		<button id="create-room">CREAR SALA</button>
+		<button id="join-room">UNIRSE A SALA</button>
+		<!-- <h2>Fuera de servicio</h2> -->
 	</section>
 </Layout>
 
