--- a/src/components/game/Game.css
+++ b/src/components/game/Game.css
@@ -1,10 +1,4 @@
 .board {
-	/* height: 100px;
-margin-top: 30px;
-display: flex;
-flex-direction: column;
-align-items: center;
-justify-content: center; */
 	display: grid;
 	grid-template-columns: repeat(3, 1fr);
 	gap: 10px;
@@ -24,4 +18,21 @@ justify-content: center; */
 	background: hsl(0deg 0% 75%);
 	box-shadow: inset -1px -1px #292929, inset 1px 1px #fff,
 		inset -2px -2px #9e9e9e, inset 2px 2px #ffffff;
+	transition: all 0.1s ease;
+}
+
+.square:hover:not(.disabled) {
+	background: hsl(0deg 0% 78%);
+	transform: translateY(-1px);
+}
+
+.square:active:not(.disabled) {
+	box-shadow: inset -1px -1px #fff, inset 1px 1px #292929,
+		inset -2px -2px #ffffff, inset 2px 2px #9e9e9e;
+	transform: translateY(1px);
+}
+
+.square.disabled {
+	cursor: not-allowed;
+	opacity: 0.8;
 }
