--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -29,9 +29,7 @@ const { title } = Astro.props
 	</head>
 	<body>
 		<slot name="header" />
-		<main>
-			<slot />
-		</main>
+		<slot />
 		<Footer />
 		<style is:global>
 			:root {
@@ -96,6 +94,38 @@ const { title } = Astro.props
 			h1 {
 				font-size: 4rem;
 				margin: 0;
+			}
+
+			.back-button {
+				position: absolute;
+				top: 16px;
+				left: 16px;
+			}
+
+			.controls {
+				display: flex;
+				gap: 10px;
+				margin: 20px 0;
+				justify-content: center;
+				align-items: center;
+			}
+
+			/* Estilo para el input en Online */
+			.controls input {
+				font-family: 'PixelFont';
+				border: none;
+				outline: 1px dotted #252525;
+				outline-offset: -4px;
+				background: #bfbfbf;
+				box-shadow:
+					inset -1px -1px #292929,
+					inset 1px 1px #fff,
+					inset -2px -2px #9e9e9e,
+					inset 2px 2px #ffffff;
+				padding: 8px;
+				width: 140px;
+				text-align: center;
+				color: var(--color-primary);
 			}
 		</style>
 	</body>
