--- a/src/pages/offline.astro
+++ b/src/pages/offline.astro
@@ -1,12 +1,12 @@
 ---
 import Layout from '@/layouts/Layout.astro'
+import OfflineGame from '@/components/game/OfflineGame'
 import Header from '@/components/Header.astro'
-import Game from '@/components/game/Game'
-
-export const prerender = true
 ---
 
-<Layout title="TA-TE-TI OFFLINE">
-	<Header slot="header" />
-	<Game client:load />
+<Layout title="TA-TE-TI - Offline">
+	<Header />
+	<main>
+		<OfflineGame client:load />
+	</main>
 </Layout>
